--- a/src/app/attendance/regularization/regularization.component.html
+++ b/src/app/attendance/regularization/regularization.component.html
@@ -252,7 +252,7 @@
                                             </div>
                                             <div class="col-lg-2">
                                                 <div class="pt-4">    
-                                                    <button type="button" class="btn btn-orange font-type fs-12 add-button text-white" data-bs-toggle="modal" id="create-btn" data-bs-target="#AddRequestModal"><span>Add Requests</span></button>
+                                                    <button type="button" class="btn btn-orange font-type fs-12 add-button text-white" (click)="AuthorityCheck();" id="create-btn" ><span>Add Requests</span></button>
                                                 </div>
                                             </div>
                                             <div class="col-lg-2">
@@ -475,16 +475,7 @@
                                 </div>
                             </div>
                                     </div>
-                                </div>
-
-
-
-
-
-
-
-
-                                
+                                </div>                                
                             </div>
                         </div>
                     </div>
@@ -689,7 +680,7 @@
 <!-- End Status Model-->
 
 
-
+<button id="AddRequestModalButton" [hidden]="true" data-bs-toggle="modal" data-bs-target="#AddRequestModal">Open Modal</button> 
                     <!--Add Request Model-->
                     <div class="modal fade" id="AddRequestModal" tabindex="-1" aria-labelledby="AddRequestModal" aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered">
