--- a/src/app/leave/business-trip-request/business-trip-request.component.html
+++ b/src/app/leave/business-trip-request/business-trip-request.component.html
@@ -786,7 +786,7 @@
                                                     </div>
                                                 <div class="col-lg-12">
                                                     <div class="hstack gap-2 justify-content-end ma-10">
-                                                    <button type="submit" class="btn btn-orange btn-label right ms-auto nexttab nexttab font-type" (click)="SelfBussTripSubmit()" ><i class="ri-check-double-line label-icon align-middle fs-16 ms-2"></i>Save</button>
+                                                    <button type="submit" class="btn btn-orange btn-label right ms-auto nexttab nexttab font-type" (click)="SelfBussTripSubmit(1)" ><i class="ri-check-double-line label-icon align-middle fs-16 ms-2"></i>Save</button>
                                                     <button type="button" class="btn btn-blue btn-label right  nexttab  nexttab font-type " (click)="clearfn()"><i class="ri-close-circle-line label-icon align-middle fs-16 ms-2"></i>Cancel</button>
                                                     </div>
                                                 </div>
@@ -1476,7 +1476,7 @@
                                                     </div>
                                                 <div class="col-lg-12">
                                                     <div class="hstack gap-2 justify-content-end ma-10">
-                                                    <button type="submit" class="btn btn-orange btn-label right ms-auto nexttab nexttab font-type" (click)="SelfBussTripSubmit()"[disabled]="failedMsg" ><i class="ri-check-double-line label-icon align-middle fs-16 ms-2"></i>Save</button>
+                                                    <button type="submit" class="btn btn-orange btn-label right ms-auto nexttab nexttab font-type" (click)="SelfBussTripSubmit(2)"[disabled]="failedMsg" ><i class="ri-check-double-line label-icon align-middle fs-16 ms-2"></i>Save</button>
                                                     <button type="button" class="btn btn-blue btn-label right  nexttab  nexttab font-type " (click)="clearfn()"><i class="ri-close-circle-line label-icon align-middle fs-16 ms-2"></i>Cancel</button>
                                                     </div>
                                                 </div>
