--- a/src/app/reports/leaveledger/leaveledger.component.html
+++ b/src/app/reports/leaveledger/leaveledger.component.html
@@ -106,7 +106,7 @@
                                                 </div> -->
                                                 <div class="col-sm-auto">
                                                     <div class="d-flex flex-wrap">
-                                                        <a  class="btn btn-danger btn-sm font-type" (click)=convertToPDF()><i class="ri-download-2-fill align-middle me-1"></i> Download </a>
+                                                        <a  class="btn btn-success btn-sm font-type" (click)=convertToPDF()><i class="ri-download-2-fill align-middle me-1"></i> Download </a>
                                                     </div>
                                                 </div>
                                             </div> 
@@ -162,7 +162,7 @@
             
                                                         <tbody class="list form-check-all font-type fs-11">
                                                             <tr>
-                                                                <td colspan="4" style="text-align: right;font-weight: bold;">Opening Balance</td> 
+                                                                <td colspan="3" style="text-align: right;font-weight: bold;">Opening Balance</td> 
                                                                 <td colspan="1">{{OpeningLeavebalance}}</td>
                                                                 
                                                             </tr>
