--- a/src/app/reports/subcontractortimesheet/subcontractortimesheet.component.html
+++ b/src/app/reports/subcontractortimesheet/subcontractortimesheet.component.html
@@ -113,7 +113,7 @@
                                                 <div class="col-sm-auto">
                                                     <div class="d-flex flex-wrap">
         
-                                                        <button type="button" class="btn btn-soft-success"><i class="ri-file-excel-2-line" ></i>Download</button>
+                                                        <button type="button" class="btn btn-soft-success"(click)="download_to_excel(year.value,month.value,comcode.value)"><i class="ri-file-excel-2-line" ></i>Download</button>
         
                                                     </div>
                                                 </div>
