--- a/src/app/reports/yearlyleave-report/yearlyleave-report.component.html
+++ b/src/app/reports/yearlyleave-report/yearlyleave-report.component.html
@@ -20,7 +20,7 @@
                                     <div class="page-title-box d-sm-flex align-items-center justify-content-between">
                                         <h4 class="mb-sm-0">Yearly Leave Report</h4>
                                     </div>
-                                    <div *ngIf="empexistance == 'Please Select Year'">
+                                    <div *ngIf="empexistance">
                                         <span class="existance_cls">{{empexistance}}</span>
                                     </div>  
                                 </div>
@@ -35,7 +35,16 @@
                                         <div class="card-body border-bottom-dashed border-bottom">
                                             <form>
                                                 <div class="row g-3">
-
+                                                    <div class="col-lg-3 col-sm-6">
+                                                        <div>
+                                                            <h3 class="font-type fs-12"><span>Company</span></h3>
+                                                            <select class="form-select font-type fs-11" aria-label="Default select example"  name="company" id="company">
+                                                                <option value="-1">All</option>
+                                                                <option *ngFor="let CompanyList of companydata" value="{{CompanyList.KEY_ID}}">
+                                                                    {{CompanyList.DATA_VALUE}}</option>
+                                                            </select>
+                                                        </div>
+                                                    </div>
                                                     <div class="col-lg-3 col-sm-6">
                                                         <div>
                                                             <h3 class="font-type fs-12"><span>Year</span></h3>
